libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_keyframs-10.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { keyframes } from \"@devup-ui/core\";\nkeyframes(...{\n  [`0%`]: { opacity: 0, ...{color: \"red\"} },\n  [`50%`]: { opacity: 0.5 },\n  [`100%`]: { opacity: 1 }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "0%": [
                        ExtractStaticStyle {
                            property: "color",
                            value: "red",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "100%": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "1",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "50%": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: ".5",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n\"a\";\n",
}
